sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:6: error: type mismatch;
 found   : Int
 required: Boolean
  var ecart:Boolean = n;
                      ^AlgCombSort:12: error: type mismatch;
 found   : Int(1)
 required: Boolean
    if (ecart>1) ecart /= 1.3;
              ^AlgCombSort:12: error: value / is not a member of Boolean
    if (ecart>1) ecart /= 1.3;
                       ^AlgCombSort:15: error: overloaded method value + with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int <and>
  (x: String)String
 cannot be applied to (Boolean)
    while (i+ecart<n)
            ^AlgCombSort:25: error: type mismatch;
 found   : Int(1)
 required: Boolean
  while (ecart > 1 || isEchange)
                 ^